# thaieda

./: .gitignore  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  benchmark_v193.py  pyproject.toml  run_eval.py  smoke_v2.py
.firecrawl/: search-heuristic.json  search-lightweight-ml.json  search-ngram.json  search-product-code-detect.json  search-sku-regex.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
_worktrees/v0.5/multi-file-schema/: AGENTS.md  README.md
docs/: index.html  main.js  robots.txt  sitemap.xml  styles.css
eval/: README.md  run_eval.py  run_oneliner_smoke.py
eval/fixtures/: build_fixtures.py  clean-thai.csv  dirty-thai-labeled.csv  superstore.csv  test-report-dirty.html  test-report.html
eval/fixtures/coffee-chain/: CUSTOMER.csv  DATE_DIM.csv  INVENTORY.csv  LOCAL_EVENT.csv  ORDER.csv  PRODUCT.csv  PROMOTION.csv  STORE.csv  TRANSACTION.csv
eval/language-detection-reports/: language-detection-v2-sample.html
eval/manifests/: coffee-chain-schema.expected.json  dirty-thai-labeled.expected.json
eval/public-test/: KANBAN-ACCURACY.md  KANBAN-V4.md  KANBAN.md  benchmark_baseline_tools.py  benchmark_quality.py  benchmark_quality_v2_fair.py  benchmark_vs_baseline.py  claude-batch1-v4.txt  claude-batch2-v4.txt  claude-batch3-accuracy.txt  claude-fix-batch1.txt  claude_code_batch2_prompt.txt  claude_code_batch3_prompt.txt  coffee-chain-full-report.html  compute_quality_metrics.py  compute_quality_metrics_v2.py  compute_quality_metrics_v2_5tools.py  deep_qa_v4.py  defect-list.md  dirty-thai-full-report.html  full_qa_pipeline.py  full_qa_pipeline_v2.py  full_qa_pipeline_v3.py  full_qa_pipeline_v4_thai.py  gen_quality_dataset.py  housing-report.html  iris-report.html  quality-ground-truth.json  sales-report.html  superstore-full-report.html  synthetic-export-test.csv  synthetic-export-test.privacy-audit.json  synthetic-test.csv  synthetic-test.json  synthetic-test.parquet  synthetic-test.privacy-audit.json  synthetic-test.xlsx  thaieda_pipeline_audit.py  titanic-report.html  transaction-new-pipeline.html  (+4 more)
eval/public-test/audit_outputs/: housing-audit-report.html  iris-audit-report.html  pipeline_audit_summary.json  titanic-audit-report.html
eval/public-test/baseline-outputs/: adult-sweetviz.html  adult-ydata.html  baseline-results.json  dirty-thai-retail-sweetviz.html  dirty-thai-retail-ydata.html  superstore-sweetviz.html  titanic-sweetviz.html  titanic-ydata.html  wisesight-sentiment-sweetviz.html  wisesight-sentiment-ydata.html
eval/public-test/benchmark-outputs/: benchmark-results.json
eval/public-test/coffee-chain-reports/: CUSTOMER-report.html  DATE_DIM-report.html  INVENTORY-report.html  LOCAL_EVENT-report.html  ORDER-report.html  PRODUCT-report.html  PROMOTION-report.html  STORE-report.html  TRANSACTION-report.html
eval/public-test/data-drift-comparison/: drift-comparison-results.json
eval/public-test/full-pipeline-results/: adult-csv-report.html  bank-marketing-csv-report.html  beijing-pm25-csv-report.html  california-housing-csv-report.html  full-pipeline-summary-v2.json  full-pipeline-summary.json  online-shoppers-csv-report.html  superstore-csv-report.html  synthetic-quality-benchmark-csv-report.html  telco-churn-csv-report.html  titanic-csv-report.html  winequality-red-csv-report.html
eval/public-test/quality-benchmark-outputs/: baseline-meta.json  quality-benchmark-final.json  sweetviz-output.txt  thaieda-output.txt  thaieda-report.html  ydata-output.txt  ydata-report.html
eval/public-test/quality-benchmark-outputs-v2/: baseline-meta.json  data-drift-results.json  data-drift-summary.json  evidently-output.txt  evidently-report.html  pygwalker-report.html  quality-benchmark-v2-5tools.json  quality-benchmark-v2-final.json  sweetviz-output.txt  sweetviz-report.html  thaieda-output.txt  thaieda-report.html  ydata-output.txt
eval/public-test/synthetic-export-tests/: absenteeism-synthetic.privacy-audit.json  absenteeism-synthetic.xlsx  absenteeism-v3.csv  absenteeism-v3.json  absenteeism-v3.xlsx  adult-synthetic.privacy-audit.json  adult-synthetic.xlsx  adult-v3.csv  adult-v3.json  adult-v3.xlsx  aps-failure-synthetic-v2.csv  aps-failure-synthetic-v2.privacy-audit.json  aps-failure-synthetic.privacy-audit.json  aps-failure-synthetic.xlsx  aps-failure-v3.xlsx  bank-marketing-synthetic.csv  bank-marketing-synthetic.privacy-audit.json  bank-marketing-synthetic.xlsx  bank-marketing-v3.json  bank-marketing-v3.xlsx  beijing-pm25-synthetic.csv  beijing-pm25-synthetic.privacy-audit.json  beijing-pm25-synthetic.xlsx  beijing-pm25-v3.json  beijing-pm25-v3.xlsx  bike-sharing-v3.json  (+29 more)
eval/results/: REPORT.md  results.json
eval/scenarios/: __init__.py  s1_thai_quality.py  s2_relationships.py  s3_insight_honesty.py
eval_reports/: report_business.html  report_missing.html  report_timeseries.html  superstore_report.html  thai-ecommerce-15k_report.html  thai-restaurant-1k_report.html  thai-restaurant-20k_report.html  thai-restaurant-5k_report.html
research/: eda-anomaly-research.md  llm-privacy-design.md  viz-cleaning-research.md  viz-modernization-research.md
src/thaieda/: __init__.py  _validation.py  cli.py  compare.py
tests/: test_anomaly.py  test_audit_fixes.py  test_blueprint.py  test_clean.py  test_clean_pipeline.py  test_cli.py  test_cli_folder.py  test_cli_oneliner.py  test_compare.py  test_cramers_v.py  test_currency.py  test_detect.py  test_dirty_dataset_eval.py  test_distribution_fit.py  test_downcast.py  test_edge_cases.py  test_export_synthetic.py  test_gesd.py  test_graceful_llm.py  test_insight.py  test_insight_engine.py  test_insight_patterns.py  test_interactive_viz.py  test_io.py  test_language_detection.py  test_llm.py  test_missing_mechanism.py  test_ml_imputation.py  test_narrative.py  test_ner.py  test_oneliner.py  test_quality.py  test_quality_before_after.py  test_quality_score.py  test_report.py  test_run_folder.py  test_schema.py  test_smart_cleaning.py  test_spearman_correlation.py  test_synthetic_privacy.py  (+9 more)
(+83 files in other folders)
