[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thaieda"
version = "2.1.1"
description = "AutoEDA สำหรับข้อมูลภาษาไทย — Exploratory data analysis that speaks Thai"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Peet Wannasarnmetha" },
]
keywords = [
    "eda",
    "exploratory-data-analysis",
    "thai",
    "nlp",
    "text-analysis",
    "data-quality",
    "profiling",
    "autoeda",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: Thai",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

# Slim core dependencies — optional NLP/ML/I/O backends live in extras.
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "jinja2>=3.1",
]

[project.optional-dependencies]
# Thai word tokenization (แนะนำ)
thai = ["pythainlp>=5.0"]
# Fast tokenizer (Rust-based)
fast = ["nlpo3>=1.2"]
# Deep learning tokenizer
dl = ["attacut>=1.0"]
# Word cloud and interactive visualization
viz = ["plotly>=5.18.0", "wordcloud>=1.9"]
# Encoding/mojibake repair (clean.normalize_encoding)
fix = ["ftfy>=6.0"]
# ML-based anomaly detection (Isolation Forest / LOF)
ml = ["scikit-learn>=1.3"]
# Statistical target analysis (proper p-values for correlation/ANOVA/chi-square)
stats = ["scipy>=1.11"]
# Timeseries decomposition (STL trend/seasonal/residual via statsmodels)
timeseries = ["statsmodels>=0.14"]
# Thai Named Entity Recognition (pythainlp + a CRF backend for the 'thainer' engine)
ner = ["pythainlp>=5.0", "python-crfsuite>=0.9"]
# Fast fuzzy matching for categorical near-duplicates (faster than difflib)
fuzzy = ["rapidfuzz>=3.0"]
# Automatic encoding detection for read_data (thaieda.io)
detect = ["chardet>=5.0"]
# Excel I/O
excel = ["openpyxl>=3.1"]
# Parquet I/O
parquet = ["pyarrow>=14.0"]
# LLM Q&A (v0.3+)
llm = ["litellm>=1.0"]
# ติดตั้งทุกอย่างในคำสั่งเดียว — pip install thaieda[all]
all = [
    "pythainlp>=5.0",
    "nlpo3>=1.2",
    "attacut>=1.0",
    "plotly>=5.18.0",
    "wordcloud>=1.9",
    "ftfy>=6.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "python-crfsuite>=0.9",
    "rapidfuzz>=3.0",
    "chardet>=5.0",
    "litellm>=1.0",
    "openpyxl>=3.1",
    "pyarrow>=14.0",
]
# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/peetwan/thaieda"
Repository = "https://github.com/peetwan/thaieda"
Issues = "https://github.com/peetwan/thaieda/issues"
Changelog = "https://github.com/peetwan/thaieda/blob/main/CHANGELOG.md"

[project.scripts]
thaieda = "thaieda.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/thaieda"]

[tool.hatch.build.targets.sdist]
exclude = [
  "eval",
  "_tmp_*",
  "data-example",
  "scratch",
  ".venv-thaieda",
  ".venv-baseline",
  ".venv-eda-test",
  ".venv-eda-test2",
  ".venv-eda-test3",
  ".venv-*",
  ".git",
]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
