[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thaieda"
version = "2.2.1"
description = "AutoEDA สำหรับข้อมูลภาษาไทย — Exploratory data analysis that speaks Thai"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Peet Wannasarnmetha" },
]
keywords = [
    "eda",
    "exploratory-data-analysis",
    "thai",
    "nlp",
    "text-analysis",
    "data-quality",
    "profiling",
    "autoeda",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: Thai",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

# Core dependencies — all features are now included by default
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "jinja2>=3.1",
    "pythainlp>=5.0",
    "nlpo3>=1.2",
    "attacut>=1.0",
    "plotly>=5.18.0",
    "wordcloud>=1.9",
    "ftfy>=6.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "python-crfsuite>=0.9",
    "rapidfuzz>=3.0",
    "chardet>=5.0",
    "litellm>=1.0",
    "openpyxl>=3.1",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
# Thai word tokenization (แนะนำ)
thai = [] # included in core
# Fast tokenizer (Rust-based)
fast = [] # included in core
# Deep learning tokenizer
dl = [] # included in core
# Word cloud and interactive visualization
viz = [] # included in core
# Encoding/mojibake repair (clean.normalize_encoding)
fix = [] # included in core
# ML-based anomaly detection (Isolation Forest / LOF)
ml = [] # included in core
# Statistical target analysis (proper p-values for correlation/ANOVA/chi-square)
stats = [] # included in core
# Timeseries decomposition (STL trend/seasonal/residual via statsmodels)
timeseries = [] # included in core
# Thai Named Entity Recognition (pythainlp + a CRF backend for the 'thainer' engine)
ner = [] # included in core
# Fast fuzzy matching for categorical near-duplicates (faster than difflib)
fuzzy = [] # included in core
# Automatic encoding detection for read_data (thaieda.io)
detect = [] # included in core
# Excel I/O
excel = [] # included in core
# Parquet I/O
parquet = [] # included in core
# LLM Q&A (v0.3+)
llm = [] # included in core
# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/peetwan/thaieda"
Repository = "https://github.com/peetwan/thaieda"
Issues = "https://github.com/peetwan/thaieda/issues"
Changelog = "https://github.com/peetwan/thaieda/blob/main/CHANGELOG.md"

[project.scripts]
thaieda = "thaieda.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/thaieda"]

[tool.hatch.build.targets.sdist]
exclude = [
  "eval",
  "_tmp_*",
  "data-example",
  "scratch",
  ".venv-thaieda",
  ".venv-baseline",
  ".venv-eda-test",
  ".venv-eda-test2",
  ".venv-eda-test3",
  ".venv-*",
  ".git",
]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
